--- a/equipo.html
+++ b/equipo.html
@@ -85,7 +85,7 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- End Navbar -->
 
     <!-- HEADER grande y IPAD-->
-    <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
+    <div class="page-header page-header-small d-none d-sm-block" data-parallax="true"
         style="background-image: url('/assets/img/jaliscoDecide/equipo/headerQuienesSomos.jpg'); background-size: 100% auto; ">
         <div class="filter">
         </div>
