New Assets and styling changes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ The above copyright notice and this permission notice shall be included in all c
 
           <!-- PARTE DERECHA HEADER -->
           <div class="col-md-6 ml-auto mr-auto">
-            <img class="img-fluid" src="/assets/img/jaliscoDecide/landing/fin del centralismo.jpg" alt="">
+            <img class="img-fluid" src="/assets/img/jaliscoDecide/landing/FinDelCentralismo.jpg" alt="">
           </div>
           <!-- PARTE DERECHA HEADER -->
         </div>
@@ -131,7 +131,7 @@ The above copyright notice and this permission notice shall be included in all c
 
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto d-none d-sm-block">
-            <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/landing/ampliar derechos.jpg" alt="">
+            <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/landing/AmpliarDerechos.jpg" alt="">
           </div>
           <!-- PARTE IZQUIERDA HEADER -->
 
@@ -144,7 +144,7 @@ The above copyright notice and this permission notice shall be included in all c
 
           <!-- IMAGEN CEL -->
           <div class="col-md-6 ml-auto mr-auto d-block d-sm-none">
-            <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/landing/ampliar derechos.jpg" alt="">
+            <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/landing/AmpliarDerechos.jpg" alt="">
           </div>
           <!-- IMAGEN CEL -->
         </div>
@@ -166,7 +166,7 @@ The above copyright notice and this permission notice shall be included in all c
 
           <!-- PARTE DERECHA HEADER -->
           <div class="col-md-6 ml-auto mr-auto">
-            <img class="img-fluid" src="/assets/img/jaliscoDecide/landing/cómo .jpg" alt="">
+            <img class="img-fluid" src="/assets/img/jaliscoDecide/landing/como.jpg" alt="">
           </div>
           <!-- PARTE DERECHA HEADER -->
         </div>
@@ -190,13 +190,13 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- DOCUMENTO 1 -->
           <div class="col-md-4 ml-auto mr-auto">
             <div class="card" style="width: auto;">
-              <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/BalanzaDescarga.jpg"
+              <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/MapaFiscal.jpg"
                 alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Mapa Fiscal</h4>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#" class="btn btn-primary">Descargar</a>
+                <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
           </div>
@@ -210,7 +210,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <h4 class="card-title">Consulta Ciudadana</h4>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#" class="btn btn-primary">Descargar</a>
+                <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <h4 class="card-title">Reforma Constitucional</h4>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="#" class="btn btn-primary">Descargar</a>
+                <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
           </div>
