--- a/transparencia.html
+++ b/transparencia.html
@@ -260,7 +260,7 @@ The above copyright notice and this permission notice shall be included in all c
 
             <!-- IMAGOTIPO -->
 
-            <div class="row " style="justify-content: flex-start;">
+            <div class="row pt-3" style="justify-content: flex-start;">
 
                 <div class="col-md-2 col-6">
 
