Commented "ingresos y egresos" for later use

--- a/transparencia.html
+++ b/transparencia.html
@@ -120,12 +120,12 @@ The above copyright notice and this permission notice shall be included in all c
                                 data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home"
                                 aria-selected="true">Minutas</a>
                             <!-- style="color: black; background-color: #FFFEF5;" -->
-                            <a class="nav-item nav-link title" style="color: black; " id="nav-profile-tab"
+                            <!-- <a class="nav-item nav-link title" style="color: black; " id="nav-profile-tab"
                                 data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile"
                                 aria-selected="false">Egresos</a>
                             <a class="nav-item nav-link title" style="color: black; " id="nav-contact-tab"
                                 data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact"
-                                aria-selected="false">Ingresos</a>
+                                aria-selected="false">Ingresos</a> -->
                         </div>
                     </nav>
 
