--- a/debateTags.html
+++ b/debateTags.html
@@ -87,8 +87,8 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- HEADER grande y IPAD-->
     <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
         style="background-image: url('/assets/img/jaliscoDecide/debate/header.jpg');">
-        <div class="filter">
-        </div>
+        <!-- <div class="filter">
+        </div> -->
         <div class="container">
         </div>
     </div>
@@ -98,8 +98,8 @@ The above copyright notice and this permission notice shall be included in all c
 
     <div class="page-header page-header-xs d-block d-sm-none" data-parallax="true"
         style="background-image: url('/assets/img/jaliscoDecide/debate/header.jpg');">
-        <div class="filter">
-        </div>
+        <!-- <div class="filter">
+        </div> -->
         <div class="container">
         </div>
     </div>
