Added new content on landing page to reflect brand

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">Fin del Centralismo.</h2>
-            <h5 class="description">Explicación sobre Jalisco Decide y el proceso político que se plantea.</h5>
+            <h5 class="description">El centralismo es herencia del régimen autoritario del siglo pasado y afecta a
+              nuestras vidas de forma directa. El centralismo evita que decidamos sobre nuestro futuro, imponiendo
+              decisiones desde la capital de México sin entender ni valorar la diversidad, las historias, las culturas y
+              las realidades locales y regionales. Somos capaces de decidir por nosotrxs, sin que nadie imponga su
+              voluntad sobre nuestros derechos, nuestras libertades y nuestro bienestar. </h5>
           </div>
           <!-- PARTE IZQUIERDA HEADER -->
 
@@ -138,7 +142,10 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE DERECHA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">Ampliar Derechos</h2>
-            <h5 class="description">Explicación sobre Jalisco Decide y el proceso político que se plantea.</h5>
+            <h5 class="description">No luchamos exclusivamente para que Jalisco y los 32 Estados Libres y Soberanos que
+              conforman la Federación recuperemos el derecho a decidir sobre su futuro. Queremos que los municipios,
+              localidades y comunidades recuperen la soberanía de forma radical para conducir sus vidas desde el poder
+              colectivo. Todo el poder a la gente. Más democracia. </h5>
           </div>
           <!-- PARTE DERECHA HEADER -->
 
@@ -160,7 +167,12 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- PARTE IZQUIERDA HEADER -->
           <div class="col-md-6 ml-auto mr-auto mt-5 mb-5" style="text-align: left;">
             <h2 class="title">¿Cómo?</h2>
-            <h5 class="description">Explicación sobre Jalisco Decide y el proceso político que se plantea.</h5>
+            <h5 class="description">No vamos a quedarnos de brazos cruzados viendo cómo decisiones autoritarias ponen en
+              riesgo nuestro futuro. No aceptamos una refinería inviable, no aceptamos energía contaminante producida a
+              partir del carbón, no aceptamos un tren ecocida que va a destruir la diversidad natural. Queremos energías
+              limpias, movilidad sustentable, fortalecer a nuestro campo, vivienda digna, una economía solidaria, más
+              ciencia y tecnología, seguridad que proteja nuestros derechos y libertades, autonomía radical para los
+              pueblos originarios, y todos los derechos para todas las personas. </h5>
           </div>
           <!-- PARTE IZQUIERDA HEADER -->
 
@@ -190,12 +202,12 @@ The above copyright notice and this permission notice shall be included in all c
           <!-- DOCUMENTO 1 -->
           <div class="col-md-4 ml-auto mr-auto">
             <div class="card" style="width: auto;">
-              <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/MapaFiscal.jpg"
-                alt="Card image cap">
+              <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/MapaFiscal.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Mapa Fiscal</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">Vamos a reformar nuestro sistema fiscal para aprovechar mejor nuestros recursos y
+                  exigir lo que es nuestro. Contamos con un equipo interdisciplinario de especialistas de primer nivel
+                  que están construyendo la ruta para lograrlo.</p>
                 <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
@@ -208,8 +220,8 @@ The above copyright notice and this permission notice shall be included in all c
               <img class="card-img-top" src="/assets/img/jaliscoDecide/landing/UrnaDescarga.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Consulta Ciudadana</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">Que las personas de Jalisco decidamos libre y democráticamente qué futuro deseamos
+                  para nuestras vidas, no alguien desde un escritorio en la capital de México.</p>
                 <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
@@ -223,8 +235,9 @@ The above copyright notice and this permission notice shall be included in all c
                 alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Reforma Constitucional</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+                <p class="card-text">Este cambio va en serio: no es un discurso ni una ocurrencia pasajera. Vamos a
+                  plasmar las modificaciones jurídicas necesarias en nuestra Constitución para que el Estado Libre y
+                  Soberano de Jalisco recupere su derecho a decidir.</p>
                 <!-- <a href="#" class="btn btn-primary">Descargar</a> -->
               </div>
             </div>
