Fixed missing elements and team adjustments

--- a/debate.html
+++ b/debate.html
@@ -109,6 +109,33 @@ The above copyright notice and this permission notice shall be included in all c
 
     <div class="main">
 
+
+        <!-- SECCION 1 -->
+        <div class="section  text-center">
+            <div class="container">
+
+                <div class="row ml-auto mr-auto" style="justify-content: space-evenly;">
+                    <!-- PARTE IZQUIERDA HEADER -->
+                    <div class="col-md-12 ml-auto mr-auto" style="text-align: justify;">
+                        <!-- <h2 class="title">Fin del Centralismo.</h2> -->
+                        <h5>
+
+                            Este es un espacio para estimular el diálogo sobre cómo terminar con el centralismo
+                            antidemocrático, reformar nuestro federalismo, y pensar soluciones y construir instituciones
+                            que permitan tomar mejores decisiones desde nuestros estados y localidades sobre política
+                            fiscal, agrícola, ambiental, de seguridad, salud, movilidad, vivienda digna y economías más
+                            sustentables, justas y solidarias.
+
+                        </h5>
+                    </div>
+                    <!-- PARTE IZQUIERDA HEADER -->
+
+
+                </div>
+            </div>
+        </div>
+        <!-- SECCION 1 -->
+
         <!-- BODY NOTICIAS -->
         <div class="section ">
             <div class="container">
