--- a/transparencia.html
+++ b/transparencia.html
@@ -109,6 +109,30 @@ The above copyright notice and this permission notice shall be included in all c
 
     <div class="main">
 
+        <!-- SECCION 1 -->
+        <div class="section  text-center">
+            <div class="container">
+
+                <div class="row ml-auto mr-auto" style="justify-content: space-evenly;">
+                    <!-- PARTE IZQUIERDA HEADER -->
+                    <div class="col-md-12 ml-auto mr-auto" style="text-align: justify;">
+                        <!-- <h2 class="title">Fin del Centralismo.</h2> -->
+                        <h5>
+
+                            Si bien no somos un ente público fiscalizable ni formamos parte de ningún orden de gobierno
+                            o poder constitucional, queremos que el proceso —de interés público— sea transparente y
+                            accesible a todas las personas. En esta sección podrás encontrar las minutas y otra
+                            información relevante sobre las decisiones que tomemos como organismo.
+
+                        </h5>
+                    </div>
+                    <!-- PARTE IZQUIERDA HEADER -->
+
+
+                </div>
+            </div>
+        </div>
+        <!-- SECCION 1 -->
 
         <!-- TAB HEADERS -->
         <div class="section pt-0 pb-0 text-center ">
