--- a/debate.html
+++ b/debate.html
@@ -86,7 +86,7 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- HEADER grande y IPAD-->
     <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/debate/headerTest.jpg');">
+        style="background-image: url('/assets/img/jaliscoDecide/debate/headerTest.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -97,7 +97,7 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- HEADER CEL-->
 
     <div class="page-header page-header-xs d-block d-sm-none" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/debate/headerTest.jpg');">
+        style="background-image: url('/assets/img/jaliscoDecide/debate/headerTest.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
