--- a/transparencia.html
+++ b/transparencia.html
@@ -43,7 +43,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="navbar-translate">
                 <a class="navbar-brand" href="/">
                     <div class="logo-image">
-                        <img src="/assets/img/jaliscoDecide/isotipoNavBar2.jpg" class="img-fluid">
+                        <img src="/assets/img/jaliscoDecide/isotipoNavBar.png" class="img-fluid">
                     </div>
                 </a>
 
@@ -86,7 +86,7 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- HEADER grande y IPAD-->
     <div class="page-header page-header-xs d-none d-sm-block" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.jpg');">
+        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -97,7 +97,7 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- HEADER CEL-->
 
     <div class="page-header page-header-xs d-block d-sm-none" data-parallax="true"
-        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.jpg');">
+        style="background-image: url('/assets/img/jaliscoDecide/transparencia/header.png');">
         <!-- <div class="filter">
         </div> -->
         <div class="container">
@@ -165,35 +165,35 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                         <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
+                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
                             <h1 class="title" style="margin-bottom: 0px;">Titulo</h1>
 
                         </div>
                         <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
                             <p>Fecha</p>
-                        </div>
+                        </div> -->
                         <!-- TITULO Y FECHA -->
 
                         <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
+                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
                             <button class="btn btn-primary">Descargar</button>
-                        </div>
+                        </div> -->
                         <!-- BOTON DL -->
 
                         <!-- TITULO Y FECHA -->
-                        <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
+                        <!-- <div class="row ml-auto  mr-auto" style="justify-content: flex-start;">
                             <h1 class="title" style="margin-bottom: 0px;">Titulo2</h1>
 
                         </div>
                         <div class="row ml-auto mr-auto mt-0 mb-4" style="justify-content: flex-start;">
                             <p>Fecha</p>
-                        </div>
+                        </div> -->
                         <!-- TITULO Y FECHA -->
 
                         <!-- BOTON DL -->
-                        <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
+                        <!-- <div class="row ml-auto mr-auto mt-0" style="justify-content: flex-start;">
                             <button class="btn btn-primary">Descargar</button>
-                        </div>
+                        </div> -->
                         <!-- BOTON DL -->
                     </div>
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
