--- a/debateNoticias/noticiaDemocracia.html
+++ b/debateNoticias/noticiaDemocracia.html
@@ -43,7 +43,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="navbar-translate">
                 <a class="navbar-brand" href="/">
                     <div class="logo-image">
-                        <img src="/assets/img/jaliscoDecide/isotipoNavBar2.jpg" class="img-fluid">
+                        <img src="/assets/img/jaliscoDecide/isotipoNavBar.png" class="img-fluid">
                     </div>
                 </a>
 
