--- a/debate.html
+++ b/debate.html
@@ -145,56 +145,56 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="col-md-9  col-sm-9" style="justify-content: flex-start;">
 
                         <!-- TITULO NOTICIA -->
-                        <div class="row ml-auto mr-auto">
+                        <!-- <div class="row ml-auto mr-auto">
                             <a href="debateNoticias/noticiaDemocracia.html">
                                 <h1 class="title">¿Por qué la democracia es importante?</h1>
                             </a>
-                        </div>
+                        </div> -->
                         <!-- TITULO NOTICIA -->
 
                         <!-- IMG NOTICIA -->
-                        <div class="row ml-auto mr-auto pb-3">
+                        <!-- <div class="row ml-auto mr-auto pb-3">
                             <a href="debateNoticias/noticiaDemocracia.html">
                                 <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/debate/noticia3.png"
                                     alt="">
                             </a>
-                        </div>
+                        </div> -->
                         <!-- IMG NOTICIA -->
 
                         <!-- DESCRIPCION NOTICIA -->
-                        <div class="row ml-auto mr-auto">
+                        <!-- <div class="row ml-auto mr-auto">
                             <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                                 accumsan luctus tellus ac sagittis. Morbi viverra lacus sed elit condimentum, id pretium
                                 risus condimentum. Etiam facilisis sed massa a pulvinar. Maecenas sagittis laoreet
                                 porttitor. Vivamus eget eros blandit, rhoncus augue a, maximus arcu. </h5>
-                        </div>
+                        </div> -->
                         <!-- DESCRIPCION NOTICIA -->
 
                         <!-- TITULO NOTICIA -->
-                        <div class="row ml-auto mr-auto">
+                        <!-- <div class="row ml-auto mr-auto">
                             <a href="debateNoticias/noticiaElecciones.html">
                                 <h1 class="title">Preparándose para el día de las elecciones</h1>
                             </a>
-                        </div>
+                        </div> -->
                         <!-- TITULO NOTICIA -->
 
                         <!-- IMG NOTICIA -->
-                        <div class="row ml-auto mr-auto pb-3">
+                        <!-- <div class="row ml-auto mr-auto pb-3">
                             <a href="debateNoticias/noticiaElecciones.html">
                                 <img class="img-fluid img-rounded" src="/assets/img/jaliscoDecide/debate/noticia5.webp"
                                     alt="">
                             </a>
 
-                        </div>
+                        </div> -->
                         <!-- IMG NOTICIA -->
 
                         <!-- DESCRIPCION NOTICIA -->
-                        <div class="row ml-auto mr-auto">
+                        <!-- <div class="row ml-auto mr-auto">
                             <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                                 accumsan luctus tellus ac sagittis. Morbi viverra lacus sed elit condimentum, id pretium
                                 risus condimentum. Etiam facilisis sed massa a pulvinar. Maecenas sagittis laoreet
                                 porttitor. Vivamus eget eros blandit, rhoncus augue a, maximus arcu. </h5>
-                        </div>
+                        </div> -->
                         <!-- DESCRIPCION NOTICIA -->
 
 
@@ -222,7 +222,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <!-- CARD TAGS -->
 
                         <!-- CARD POPULAR STORIES -->
-                        <div class="row ml-auto mr-auto">
+                        <!-- <div class="row ml-auto mr-auto">
                             <div class="card" style="width: auto;">
                                 <div class="card-body">
                                     <h4 class="card-title">Historias Populares</h4>
@@ -237,7 +237,7 @@ The above copyright notice and this permission notice shall be included in all c
 
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- CARD POPULAR STORIES -->
 
                     </div>
